--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <header class=" ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-info fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -21,58 +22,58 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscription">Subscribe</a>
                   </li>
               </div>
             </div>
         </nav>
           <!-- image slider  
         ======================================-->
-        <section class="container">
+        <section class="container" id="home">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner mb-5 mt-5 rounded-3">
-                    <div class="carousel-item active">
-                        <div class="row bg-info p-5 d-flex align-items-center">
-                            <div class="col-lg-7">
+                    <div class="carousel-item active default-color">
+                        <div class="row  d-flex align-items-center banner-padding">
+                            <div class="col-lg-7 ">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn-warning p-1 rounded">Buy Now</button>
+                                <button class="btn btn-color ">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="row bg-info p-5 d-flex align-items-center">
+                    <div class="carousel-item default-color">
+                        <div class="row d-flex align-items-center banner-padding">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                                <h1>$420</h1>
-                                <button class="btn-warning p-1 rounded">Buy Now</button>
+                                <h1>$620</h1>
+                                <button class="btn btn-color ">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item ">
-                        <div class="row bg-info p-5 d-flex align-items-center">
+                    <div class="carousel-item default-color">
+                        <div class="row d-flex align-items-center banner-padding">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
-                                <h1>$420</h1>
-                                <button class="btn-warning p-1 rounded">Buy Now</button>
+                                <h1>$920</h1>
+                                <button class="btn btn-color ">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -98,21 +99,27 @@
             <div class=" ">
                 <div class="row ">
                     <div class="col mb-5">
-                        <div class="p-3 bg-warning d-flex align-items-center justify-content-between rounded-3">
-                            <h1 class="text-white ">Watch</h1>
-                            <img src="images/categories/watch.png" alt="">
+                        <div class="p-3 bg-warning rounded-3">
+                            <a class="d-flex align-items-center justify-content-between catagories" href="https://www.amazon.com/Mens-Watches/b?ie=UTF8&node=6358539011">
+                                <h1 class="text-white ">Watch</h1>
+                                <img src="images/categories/watch.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="p-3 bg-success d-flex align-items-center justify-content-between rounded-3">
-                            <h1 class="text-white ">Shoes</h1>
-                            <img src="images/categories/shoes.png" alt="">
+                        <div class="p-3 bg-success rounded-3">
+                            <a class="d-flex align-items-center justify-content-between catagories" href="https://www.amazon.com/Mens-Shoes/b?ie=UTF8&node=679255011">
+                                <h1 class="text-white ">Shoes</h1>
+                                <img src="images/categories/shoes.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <div class="col mb-5">
-                        <div class="p-3 bg-primary d-flex align-items-center justify-content-between rounded-3">
-                            <h1 class="text-white ">Bag</h1>
-                            <img src="images/categories/bag.png" alt="">
+                        <div class="p-3 bg-primary rounded-3">
+                            <a class="d-flex align-items-center justify-content-between catagories" href="https://www.amazon.in/bags/s?k=bags">
+                                <h1 class="text-white ">Bag</h1>
+                                <img src="images/categories/bag.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -121,18 +128,20 @@
 
         <!-- card section 
         ============================ -->
-        <section class="container mb-5">
+        <section class="container mb-5" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4 ">
                 <div class="col">
                     <div class="card h-100  border-0 shadow-lg">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Supply 360</h5>
+                            <h5 class="card-title">Sply 360</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class=" p-3 ">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <a href="https://www.amazon.com/Mens-Shoes/b?ie=UTF8&node=679255011">
+                                <button class="btn btn-color">Buy Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -140,11 +149,13 @@
                     <div class="card h-100  border-0 shadow-lg">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Supply 360</h5>
+                            <h5 class="card-title">Nike 360</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class=" p-3 ">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <a href="https://www.amazon.com/Mens-Shoes/b?ie=UTF8&node=679255011">
+                                <button class="btn btn-color">Buy Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -152,29 +163,35 @@
                     <div class="card h-100  border-0 shadow-lg">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Supply 360</h5>
+                            <h5 class="card-title">Red Airmax 360</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class=" p-3 ">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <a href="https://www.amazon.com/Mens-Shoes/b?ie=UTF8&node=679255011">
+                                <button class="btn btn-color">Buy Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
               </div>
         </section>
         
-        <section class="container mb-5">
+        <!-- backpack section 
+        =========================== -->
+        <section class="container mb-5" id="backpack">
             <h1>Backpack</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4 ">
                 <div class="col">
                     <div class="card h-100  border-0 shadow-lg">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Supply 360</h5>
+                            <h5 class="card-title">Red Laltu Bag</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class=" p-3 ">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <a href="https://www.amazon.in/bags/s?k=bags">
+                                <button class="btn btn-color">Buy Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -182,11 +199,13 @@
                     <div class="card h-100  border-0 shadow-lg">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Supply 360</h5>
+                            <h5 class="card-title">Blue Niltu Bag</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class=" p-3 ">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <a href="https://www.amazon.in/bags/s?k=bags">
+                                <button class="btn btn-color">Buy Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -194,20 +213,43 @@
                     <div class="card h-100  border-0 shadow-lg">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Supply 360</h5>
+                            <h5 class="card-title">Black Kaltu Bag</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class=" p-3 ">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <a href="https://www.amazon.in/bags/s?k=bags">
+                                <button class="btn btn-color">Buy Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
               </div>
         </section>
+
+        <!-- subscription section 
+        ============================ -->
+        <section class="container default-color d-flex justify-content-center mb-5 rounded-3 p-5" id="subscription">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <form action="" class="d-flex flex-column">
+                    <input class="mb-3 form-control" type="email" placeholder="Type Your Email">
+                    <input class="mb-3 form-control" type="number" placeholder="Type Your Mobile Number">
+                    <button class="btn btn-color my-2 ">Done</button>
+                </form>
+            </div>
+        </section>
     </main>
 
-
-
+    <footer>
+        <section class="bg-footer text-center p-5">
+            <div>
+                <a href="https://www.facebook.com/Rezaul909"><img class="my-img rounded-circle" src="images/banner-images/my.JPG" alt=""></a>
+                <h3>Panda Products</h3>
+                <p>©2025. Panda Commerce. All rights reserved. Rezaul, Bangladesh.</p>
+            </div>
+        </section>
+    </footer>
 
     <!-- Bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
