--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <header class=" ">
         <nav class="navbar navbar-expand-lg navbar-light bg-info fixed-top">
             <div class="container">
+              <a class="" href="#">
+                <img class="my-img rounded-circle" src="images/banner-images/my.JPG" alt="">
+              </a>
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
               </a>
@@ -42,8 +45,8 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner mb-5 mt-5 rounded-3">
                     <div class="carousel-item active default-color">
-                        <div class="row  d-flex align-items-center banner-padding">
-                            <div class="col-lg-7 ">
+                        <div class="row  d-flex align-items-center p-5">
+                            <div class="col-lg-7 mb-3">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                 <h1>$420</h1>
@@ -55,8 +58,8 @@
                         </div>
                     </div>
                     <div class="carousel-item default-color">
-                        <div class="row d-flex align-items-center banner-padding">
-                            <div class="col-lg-7">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-lg-7 mb-3">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                 <h1>$620</h1>
@@ -68,8 +71,8 @@
                         </div>
                     </div>
                     <div class="carousel-item default-color">
-                        <div class="row d-flex align-items-center banner-padding">
-                            <div class="col-lg-7">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-lg-7 mb-3">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                                 <h1>$920</h1>
